src/objects/ContextMedia_Product__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Product Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Unscheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending IT Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Competitor Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Line Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled - Competitor Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Install Plays Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Install No Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Install DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Repair - No Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Repair - Playing Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Site - Pending Repair/Awaiting Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Delayed Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Delayed Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Would close, but doesn&apos;t currently qualify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_Rooms_Screens__c</fullName>
        <formula>Account__r.NumberOfScreensInstalled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Waiting Rooms Screens</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_Would_They_Take__c</fullName>
        <label>What Would They Take?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Would_Close_Not_Currently__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would Close, Office Not Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Day_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>30 Day Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Products_Installed__c</fullName>
        <label># of Products Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Qualified_Prescribers__c</fullName>
        <label># of Qualified Prescribers&apos;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Qualified_Waiting_Rooms__c</fullName>
        <inlineHelpText>How many waiting rooms are we paying commissions on</inlineHelpText>
        <label># of Qualified Waiting Rooms (</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Tablets_Installed__c</fullName>
        <formula>Account__r.NumberOfTabletsInstalled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Tablets Installed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sortoutIT__c</fullName>
        <formula>Account__r.Contact_to_sort_out_IT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sortoutIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>week_days_between_sale_and_confirmed__c</fullName>
        <formula>CASE(MOD( SoldDate__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( DateInstalled__c  - SoldDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( DateInstalled__c - SoldDate__c  )/7)*5)-1</formula>
        <label>SignUp to Installed. - WDO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ContextMedia Product</label>
    <listViews>
        <fullName>Alyssa_s_Wifi_Products</fullName>
        <columns>Product_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Comment__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>contains</operation>
            <value>Waiting Room Wifi,Waiting Room Wifi - Sprint/Verizon</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>notContain</operation>
            <value>Qualified</value>
        </filters>
        <label>Alyssa&apos;s Wifi Products</label>
    </listViews>
    <listViews>
        <fullName>Audit</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Stage__c</columns>
        <columns>Product_Type__c</columns>
        <columns>of_Tablets_Installed__c</columns>
        <columns>DateScheduled__c</columns>
        <columns>DateConfirmed__c</columns>
        <columns>DateInstalled__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Installed,Uninstalled</value>
        </filters>
        <filters>
            <field>DateScheduled__c</field>
            <operation>lessOrEqual</operation>
            <value>9/13/2015</value>
        </filters>
        <label>MSE Product Activation Audit</label>
    </listViews>
    <listViews>
        <fullName>Conor_Klu_s_Products</fullName>
        <columns>Sales_Stage__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Type__c</columns>
        <columns>of_Qualified_Prescribers__c</columns>
        <columns>of_Tablets_Installed__c</columns>
        <columns>SoldDate__c</columns>
        <columns>DateConfirmed__c</columns>
        <columns>DateScheduled__c</columns>
        <columns>DateInstalled__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>Conor Klusendorf</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>BAT</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>contains</operation>
            <value>Open,New,Initial Touch,Ongoing Dialogue,Pitched &amp; Info Sent,Verbal Co</value>
        </filters>
        <label>Conor Klu&apos;s BATs</label>
    </listViews>
    <listViews>
        <fullName>Conor_Klu_s_Products1</fullName>
        <columns>Account__c</columns>
        <columns>Product_Type__c</columns>
        <columns>NAME</columns>
        <columns>Sales_Stage__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>Conor Klusendorf</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Waiting Room Wifi</value>
        </filters>
        <label>Conor Klu&apos;s WiFi!!!!</label>
    </listViews>
    <listViews>
        <fullName>Conor_Klu_s_WiFi</fullName>
        <columns>Account__c</columns>
        <columns>Product_Type__c</columns>
        <columns>NAME</columns>
        <columns>Sales_Stage__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>Conor Klusendorf</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Waiting Room Wifi</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>contains</operation>
            <value>New,Initial Touch,Objection,Ongoing Dialogue,Open,Pitched &amp; Info Sent,Qual</value>
        </filters>
        <label>Conor Klu&apos;s WiFi</label>
    </listViews>
    <listViews>
        <fullName>Conor_Klu_s_WiFi1</fullName>
        <columns>Account__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Product_Type__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>Conor Klusendorf</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Waiting Room Wifi</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>contains</operation>
            <value>New,Initial Touch,Objection,Ongoing Dialogue,Open,Pitched &amp; Info Sent,Qual</value>
        </filters>
        <label>Conor Klu&apos;s WiFi</label>
    </listViews>
    <listViews>
        <fullName>Frank_Products</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Account__c</columns>
        <columns>DateConfirmed__c</columns>
        <columns>DateInstalled__c</columns>
        <columns>SoldDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Rep__c</columns>
        <filterScope>Mine</filterScope>
        <label>Frank_Products</label>
    </listViews>
    <listViews>
        <fullName>My_Tablets</fullName>
        <columns>Sales_Stage__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Type__c</columns>
        <columns>of_Qualified_Prescribers__c</columns>
        <columns>of_Tablets_Installed__c</columns>
        <columns>SoldDate__c</columns>
        <columns>DateConfirmed__c</columns>
        <columns>DateScheduled__c</columns>
        <columns>DateInstalled__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>equals</operation>
            <value>Conor Klusendorf</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>contains</operation>
            <value>Tablet</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>contains</operation>
            <value>Open,New,Initial Touch,Ongoing Dialogue,Pitched &amp; Info Sent,Verbal Co</value>
        </filters>
        <label>Conor Klu&apos;s Tablets</label>
    </listViews>
    <listViews>
        <fullName>My_Wifi_Product</fullName>
        <columns>Product_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Product__c</columns>
        <columns>Network_from_act__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>DateScheduled__c</columns>
        <columns>of_Qualified_Prescribers__c</columns>
        <columns>of_Qualified_Waiting_Rooms__c</columns>
        <columns>Qualified_Waiting_Rooms__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>Waiting Room Wifi,Waiting Room Wifi - Sprint/Verizon</value>
        </filters>
        <filters>
            <field>Network_from_act__c</field>
            <operation>notContain</operation>
            <value>general health</value>
        </filters>
        <label>My Wifi Product</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContextMedia Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Color_for_Unconfirmed_Outreach_is_Req</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
    AND(
        TEXT(Sales_Stage__c) = &quot;Unconfirmed Outreach&quot;, 
        ISBLANK(Color_on_Unconfirmed_Outreach__c)), True, False
 )</errorConditionFormula>
        <errorDisplayField>Color_on_Unconfirmed_Outreach__c</errorDisplayField>
        <errorMessage>&quot;Hey!!! Don&apos;t forget to add some color as to the reason why this Product/Account went Unconfirmed Outreach.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Installed_Verification</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
	AND(NOT(ISBLANK(DateInstalled__c)), 
	OR( 
	AND( 
		NOT(ISPICKVAL(Stage__c, &apos;Installed&apos;)), 
		NOT(ISPICKVAL(Stage__c, &apos;Partial Install Plays Content&apos;)), 
		NOT(ISPICKVAL(Stage__c, &apos;Partial Install No Content&apos;)), 
		NOT(ISPICKVAL(Stage__c, &apos;Uninstalled&apos;)) 
 ), 
ISBLANK(of_Products_Installed__c) 
) 
), 
AND(OR( 
		(ISPICKVAL(Stage__c, &apos;Installed&apos;)), 
		(ISPICKVAL(Stage__c, &apos;Partial Install Plays Content&apos;)), 
		(ISPICKVAL(Stage__c, &apos;Partial Install No Content&apos;)), 
		(ISPICKVAL(Stage__c, &apos;Uninstalled&apos;)) 
	), 
	ISBLANK(of_Products_Installed__c) 
	) 
)</errorConditionFormula>
        <errorMessage>Installed Date, Product Stage, and # of Products Installed must all be filled out at once if the Product Stage is Installed or Partial Install.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Objection_Details</fullName>
        <active>true</active>
        <description>Requires other objection details if Other was selected as the objection reason.</description>
        <errorConditionFormula>AND(ISPICKVAL(Objection_Reason__c, &quot;Other&quot;), ISBLANK(OtherObjectionDetails__c))</errorConditionFormula>
        <errorDisplayField>OtherObjectionDetails__c</errorDisplayField>
        <errorMessage>If you selected &quot;Other&quot; for objection reason, you must enter an explanation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualified_Required_Fields</fullName>
        <active>true</active>
        <description>Ensures that required fields are filled out prior to a product becoming qualified.</description>
        <errorConditionFormula>AND(ISPICKVAL(Sales_Stage__c, &quot;Qualified&quot;),
    Account__r.RecordType.Name = &quot;Member Outreach&quot;,
    OR(
       ISNULL(Account__r.Contact_for_Scheduling__c),
       ISNULL(Account__r.Network__c),
       ISNULL(of_Qualified_Waiting_Rooms__c),
       ISPICKVAL(Product_Type__c, &quot;&quot;),
       ISPICKVAL(Product__c, &quot;&quot;),
       ISNULL(Quantity__c),
       ISNULL(Account__r.Notes__c),
       ISNULL(Account__r.Phone_for_schedule__c),
       ISNULL(Account__r.IT_Phone_and_Email__c)))</errorConditionFormula>
        <errorMessage>The following fields are required in order to qualify this product. Ensure they are filled out and try again. (Contact/Phone/Email for Scheduling, Content Requested, # Waiting Rooms, Product,Product Type, Quantity, Lead Source, and Notes for OBD)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Uninstalled_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(DateSpecificScreenUninstalled__c)), NOT(ISPICKVAL(Stage__c, &apos;Uninstalled&apos;))),
AND(ISPICKVAL(Stage__c, &apos;Uninstalled&apos;), ISNULL(DateSpecificScreenUninstalled__c)) 
)</errorConditionFormula>
        <errorDisplayField>Stage__c</errorDisplayField>
        <errorMessage>If Stage is &quot;Uninstalled&quot; then  Date Uninstalled can&apos;t be empty and vice versa.</errorMessage>
    </validationRules>
</CustomObject>